--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "express-session": "^1.17.3",
     "mongodb": "^4.10.0",
     "mongoose": "^6.6.1",
