--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongodb": "^4.10.0",
     "mongoose": "^6.6.1",
     "multer": "^1.4.5-lts.1",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "socket.io": "^4.5.3"
   }
 }
